--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .card {
-	width: 35%;
-	height: 30%;
+	width: 100%;
+	max-width: 300px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
 	transition: .3s;
 	overflow: hidden;
@@ -14,6 +14,15 @@
 
 .card img {
 	width: 100%;
-	height: 100%;
-	 object-fit: cover;
+	height: auto;
+	min-height: 203px; 
+	object-fit: cover;
+}
+
+.card .info {
+	margin: 10px;
+}
+
+.card .info p {
+	margin: 5px 0;
 }
