--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	background-color: #7828B4;
+	justify-content: space-between;
 }
 
 .header .logo {
@@ -19,3 +20,24 @@
 	margin: 0 10px;
 	color: white;
 }
+
+.select {
+	display: flex;
+}
+
+.custom_select {
+	height: 34px;
+	overflow: hidden;
+	background-color: white;
+	color: white;
+}
+
+.custom_select select { 
+	background-color: transparent;
+	padding: 5px;
+	font-size: 1rem;
+	border: 1px solid #ccc;
+	height: 34px;
+}
+
+
